<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subcate_cust"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Masuk.SubCateCustomer">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_8"
        android:layout_marginTop="@dimen/padding_4"
        android:layout_marginRight="@dimen/padding_8"
        android:layout_marginBottom="@dimen/padding_4">
        <LinearLayout
            android:id="@+id/subcate_cust_atas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/padding_8">
            <LinearLayout
                android:layout_width="301dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <androidx.appcompat.widget.SearchView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_search"/>
            </LinearLayout>
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_help_outline_darked_35dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/padding_8"
                android:layout_marginLeft="@dimen/padding_8"/>
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_email_darked_35dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/padding_8" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_4"
                android:layout_marginBottom="@dimen/padding_4"
                app:cardCornerRadius="@dimen/padding_4">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text">
                    <ImageView
                        android:id="@+id/img_subcate_cust"
                        android:layout_width="135dp"
                        android:layout_height="135dp"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"/>
                    <TextView
                        android:id="@+id/tv_name_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginTop="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_marginBottom="@dimen/padding_8"
                        android:layout_toEndOf="@id/img_subcate_cust"
                        android:textSize="@dimen/title_size_16"
                        android:textStyle="bold"
                        android:text="@string/subcate_name"/>
                    <TextView
                        android:id="@+id/tv_detail_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_subcate_cust"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_toEndOf="@id/img_subcate_cust"
                        android:ellipsize="end"
                        android:maxLines="5"
                        android:text="@string/detail_subcate_cust" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/padding_16"
                        android:layout_toEndOf="@id/img_subcate_cust"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_open_subcate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/padding_16"
                            android:layout_marginBottom="@dimen/padding_8"
                            android:text="@string/lihat"
                            android:textSize="@dimen/title_size_16"
                            android:background="@drawable/edit_button"/>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_4"
                android:layout_marginBottom="@dimen/padding_4"
                app:cardCornerRadius="@dimen/padding_4">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/img2_subcate_cust"
                        android:layout_width="135dp"
                        android:layout_height="135dp"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"/>
                    <TextView
                        android:id="@+id/tv2_name_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginTop="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_marginBottom="@dimen/padding_8"
                        android:layout_toEndOf="@id/img2_subcate_cust"
                        android:textSize="@dimen/title_size_16"
                        android:textStyle="bold"
                        android:text="@string/subcate_name"/>
                    <TextView
                        android:id="@+id/tv2_detail_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv2_name_subcate_cust"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_toEndOf="@id/img2_subcate_cust"
                        android:ellipsize="end"
                        android:maxLines="5"
                        android:text="@string/detail_subcate_cust" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/padding_16"
                        android:layout_toEndOf="@id/img2_subcate_cust"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn2_open_subcate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/padding_16"
                            android:layout_marginBottom="@dimen/padding_8"
                            android:text="@string/lihat"
                            android:textSize="@dimen/title_size_16"
                            android:background="@drawable/edit_button"/>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_4"
                android:layout_marginBottom="@dimen/padding_4"
                app:cardCornerRadius="@dimen/padding_4">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/img3_subcate_cust"
                        android:layout_width="135dp"
                        android:layout_height="135dp"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"/>
                    <TextView
                        android:id="@+id/tv3_name_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginTop="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_marginBottom="@dimen/padding_8"
                        android:layout_toEndOf="@id/img3_subcate_cust"
                        android:textSize="@dimen/title_size_16"
                        android:textStyle="bold"
                        android:text="@string/subcate_name"/>
                    <TextView
                        android:id="@+id/tv3_detail_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv3_name_subcate_cust"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_toEndOf="@id/img3_subcate_cust"
                        android:ellipsize="end"
                        android:maxLines="5"
                        android:text="@string/detail_subcate_cust" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/padding_16"
                        android:layout_toEndOf="@id/img3_subcate_cust"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn3_open_subcate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/padding_16"
                            android:layout_marginBottom="@dimen/padding_8"
                            android:text="@string/lihat"
                            android:textSize="@dimen/title_size_16"
                            android:background="@drawable/edit_button" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_4"
                android:layout_marginBottom="@dimen/padding_4"
                app:cardCornerRadius="@dimen/padding_4">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/img4_subcate_cust"
                        android:layout_width="135dp"
                        android:layout_height="135dp"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"/>
                    <TextView
                        android:id="@+id/tv4_name_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginTop="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_marginBottom="@dimen/padding_8"
                        android:layout_toEndOf="@id/img4_subcate_cust"
                        android:textSize="@dimen/title_size_16"
                        android:textStyle="bold"
                        android:text="@string/subcate_name"/>
                    <TextView
                        android:id="@+id/tv4_detail_subcate_cust"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv4_name_subcate_cust"
                        android:layout_marginLeft="@dimen/padding_16"
                        android:layout_marginRight="@dimen/padding_16"
                        android:layout_toEndOf="@id/img4_subcate_cust"
                        android:ellipsize="end"
                        android:maxLines="5"
                        android:text="@string/detail_subcate_cust" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/padding_16"
                        android:layout_toEndOf="@id/img4_subcate_cust"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn4_open_subcate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/padding_16"
                            android:layout_marginBottom="@dimen/padding_8"
                            android:text="@string/lihat"
                            android:textSize="@dimen/title_size_16"
                            android:background="@drawable/edit_button"/>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
